syntax = "proto3";

option go_package = "./slicepb";
package slice;

service SliceService {
  rpc StartSlice(SliceRequest) returns (StartResponse);
}

// 请求结构体
message SliceRequest {
  string input_path = 1;
  string output_root = 2;
  float threshold = 3;
  int32 min_length = 4;
  int32 min_interval = 5;
  int32 hop_size = 6;
  int32 max_sil_kept = 7;
  int32 _max = 8;
  float alpha = 9;
  int32 n_parts = 10; // 分割部分数
}

// 响应结构体
message StartResponse {
  string status = 1; //成功还是失败
  repeated KeyValuePair data = 2; //返回键值对格式的数据信息
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}